--vX.Y.Z

- Fixed baseline alignment on multiple runs (Bug #64).
- Added option to keep the temporary files, even after successful LaTeX runs.

--v0.7.2

– ????

--v0.7.1

- Fixed the insertion of complex LaTeX (Bug #43).
- Select the insertion marker when opening the insert complex LaTeX dialog.
- Cleaned up the options dialog.
- Replaced place holder __REPLACEME__ with __REPLACE_ME__, which IMHO is easier
  to the eye.
- Added alignment of inserted pictures to the text baseline (Bug #36).
- Added improvements of LaTeXIt! button:
  - Button is disabled for plain text composer windows (Bug #48).
  - Middle click calls 'undo' (Bug #2).
  - Shift+middle click calls 'undo_all'.
- Added context menu to composer window (Bug #49).
- Added LaTeXIt! to the Add-ons menu to access the preferences (Bug #42).
- Removed the configuration item from toolbar and context menues, because they
  are not needed anymore.
- Delete all cached images when the composer window is closed (Bug #44).
- Added autoscaling of images to font size (can be switched off in the
  preferences, where a size can be manually set).
- When inserting a complex LaTeX, the size can either be automatically
  calculated from the surrounding text or set manually.
- Use 'font size' (in px) instead of 'resolution'.
- Check before sending, if a LatexIt! report exists in the message.
- Display an error message, if the place holder "__REPLACE_ME__" cannot be found in the template. (https://github.com/protz/LatexIt/pull/53#discussion_r450431520)
- Added "!!!" in front of error messages.
- Use "\usepackage[utf8x]{inputenc}" instead of "\usepackage[utf8]{inputenc}",
  which should remove the (Debian) dependency of package texlive-latex-extra
  (Bug #8).

--v0.7

- Use latex/dvipng instead of latex/dvips/convert to generate the image file.

--v0.6.7

- Fixed the mime type of the embedded image to image/png

--v0.6.6

- Adding suggestions from trying to sign add-on through Mozilla
- Update URL points to github