@@ -20,7 +20,7 @@
 \usepackage[active,displaymath,textmath]{preview}
 \pagestyle{empty}
 \begin{document}
-__REPLACE_ME__ %this is where your LaTeX expression goes
+__REPLACE_ME__ % this is where your LaTeX expression goes between $$
 \end{document}
     </pre>
    <p>
@@ -54,7 +54,7 @@ __REPLACE_ME__ %this is where your LaTeX expression goes
 \usepackage{mathpazo}
 \pagestyle{empty}
 \begin{document}
-__REPLACE_ME__ %this is where your LaTeX expression goes
+__REPLACE_ME__ % this is where your LaTeX expression goes between $$
 \end{document}
     </pre>
  
