@@ -1,6 +1,7 @@
 --vX.Y.Z
 
 - Fixed baseline alignment on multiple runs (Bug #64).
+- Bracket the placeholder with $$ in the complex LaTeX dialog.
 - Added option to keep the temporary files, even after successful LaTeX runs.
 
 --v0.7.2
